<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Wax Wanderer</string>

    <string name="explore_title">Explore</string>

    <string name="navigation_drawer_open">Opened</string>
    <string name="navigation_drawer_close">Closed</string>
    <string name="login_email_password_hint">Password</string>
    <string name="login_email_submit_text">Login</string>
    <string name="login_email_sign_up_text">No account yet? <b>Sign up here</b></string>
    <string name="login_email_email_hint">Email</string>

    <!--Facebook login strings-->
    <string name="facebook_app_id">353149691816766</string>
    <string name="fb_login_protocol_scheme">fb353149691816766</string>
    <string name="button_text_sign_in">Sign in</string>
    <string name="button_text_create_account">Create Account</string>
    <string name="log_out_title">Log out</string>
    <string name="submit_style_preferences_button_text">Submit</string>
    <string name="favourites_title">Favourites</string>
    <string name="favourites_no_favourites_text">No favourites to display</string>
    <string name="match_title">Match</string>
    <string name="settings_title">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="matches_title">Friends</string>
    <string name="search_title">Search</string>
    <string name="matches_no_matches_text">No matches yet! Go out there and get some!</string>
    <string name="action_settings">Messages</string>
    <string name="matches_action_message">Message</string>
    <string name="matches_action_remove">Remove</string>

    <!-- Strings related to Settings -->
    <string-array name="spinner_user_genders">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="spinner_matching_genders">
        <item>Males</item>
        <item>Females</item>
        <item>Everyone!</item>
    </string-array>

    <string name="hint_mail">Mail</string>
    <string name="hint_password">Password</string>
    <string name="sent_message">write a message!</string>
    <string name="explore_no_vinyls_text">No vinyl releases to display</string>
    <string name="type_your_message">Type your message…</string>
    <string name="leaderboard_title">Leaderboard</string>
    <string name="action_show_recommendations">Recommendations</string>
    <string name="recommendations_no_recommendations_text">No recommendations to display. You may need to favourite/rate more vinyls!</string>
    <string name="vinyl_settings_title">Vinyl preferences</string>
    <string name="recommendations_action_like">Like</string>
    <string name="sign_up_already_a_member">Already a member? <b>Login</b></string>
    <string name="text_no_internet">No internet connection</string>
    <string name="text_no_vinyls">No vinyls to display!</string>
    <string name="leader_board_help_text">The leader board displays the top ranking vinyl sharers on Wax Wander. Points are earned by receiving 3, 4, or 5 star feedback when sharing vinyl releases with other matched users.</string>
    <string name="message_rating_current_user_rated">You rated:</string>
    <string name="message_rating_other_user_rated">They rated:</string>
    <string name="message_rating_current_user_unrated">Review this suggestion...</string>
    <string name="message_rating_other_user_unrated">Not rated yet</string>
    <string name="view_my_favourites">View my favourites</string>
    <string name="match_no_users">Unfortunately there\'s no new profiles to show you</string>
    <string name="default_notification_channel_id">wax_wanderer_default_channel</string>
    <string name="explore_action_add">Add to favourites</string>
    <string name="favourite_action_remove">Remove</string>
    <string name="favourite_toolbar_sort">Sort</string>
    <string name="browse_title">Browse</string>
    <string name="friends_no_requests_text">No friend requests to show</string>
    <string name="search_friends_text">Search for a user using the toolbar</string>
    <string name="search_action_send_request">Send friend request</string>
    <string name="request_action_accept">Accept</string>
    <string name="search_vinyls_text">Search for vinyls using the toolbar above</string>
    <string name="search_advanced_search">Advanced search</string>
    <string name="explore_action_share">Share</string>
    <string name="explore_action_recommend">Recommend</string>

    <string name="dynamic_link_domain">gk9ar.app.goo.gl</string>
    <string name="deep_link_url">https://open.waxwanderer.com</string>

</resources>